--- a/dnd-dice/public/index.html
+++ b/dnd-dice/public/index.html
@@ -22,7 +22,12 @@
     <title>DnD Dice</title>
     <link rel="stylesheet" href="styles.css">
   </head>
-    <h1>Roll ALL the Dice!</h1>
+    <div id="TopSide">
+      <img src="D&D_Logo_2.png" alt="Dungeons and Dragons" style="width: 300px; height: 150px; ">
+      <h1>Roll ALL the Dice!</h1>
+    </div>
+
+    <h2 id="DieResult"></h2>
   <body>
     <div id="DTwenty"></div> <div id="DTwelve"></div>
     <div id="DTen"></div> <div id="DEight"></div>
