Started the process of consolidating the die roll answers into one div

--- a/dnd-dice/public/index.html
+++ b/dnd-dice/public/index.html
@@ -26,13 +26,12 @@
       <img src="D&D_Logo_2.png" alt="Dungeons and Dragons" style="width: 300px; height: 150px; ">
       <h1>Roll ALL the Dice!</h1>
     </div>
-
-    <h2 id="DieResult"></h2>
+  <div id="RollDiv"><h1 id="Answer"></h1></div>
   <body>
     <div id="DTwenty"></div> <div id="DTwelve"></div>
     <div id="DTen"></div> <div id="DEight"></div>
     <div id="DSix"></div> <div id="DFour"></div>
-    <div id="Percentile"></div>
+    <div id="Percentile"></div> <div id="StatBlock"></div>
     <script src="dist/bundle.js" charset="utf-8"></script>
     <!--
       This HTML file is a template.
